testdata/baselines/reference/submodule/conformance/ClassAndModuleWithSameNameAndCommonRootES6.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
module.ts(2,19): error TS2433: A namespace declaration cannot be in a different file from a class or function with which it is merged.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== class.ts (0 errors) ====
    module X.Y {
        export class Point {
            constructor(x: number, y: number) {
                this.x = x;
                this.y = y;
            }
            x: number;
            y: number;
        }
    }
    
==== module.ts (1 errors) ====
    module X.Y {
        export module Point {
                      ~~~~~
!!! error TS2433: A namespace declaration cannot be in a different file from a class or function with which it is merged.
            export var Origin = new Point(0, 0);
        }
    }
    
==== test.ts (0 errors) ====
    //var cl: { x: number; y: number; }
    var cl = new X.Y.Point(1,1);
    var cl = X.Y.Point.Origin; // error not expected here same as bug 83996 ?
    
    
==== simple.ts (0 errors) ====
    class A {
        id: string;
    }
    
    module A {
        export var Instance = new A();
    }
    
    // ensure merging works as expected
    var a = A.Instance;
    var a = new A();
    var a: { id: string };
    